api login , register, notification

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,7 +45,9 @@ android {
         applicationId "com.example.ecommerce_app_mobile"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        //chỉnh sửa 04/03/2024 minsdk flutter toast
+        // minSdkVersion flutter.minSdkVersion
+        minSdkVersion 21
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
