--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:label="ecommerce_app_mobile"
         android:name="${applicationName}"
@@ -21,6 +22,7 @@
               />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+                
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
