--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   http_parser: ^4.0.2
   flutter_svg: ^2.0.7
   fluttertoast: ^8.2.4
+  shared_preferences: ^2.1.2
+  
 
 dev_dependencies:
   flutter_test:
