--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   flutter_svg: ^2.0.7
   fluttertoast: ^8.2.4
   shared_preferences: ^2.1.2
+  carousel_slider: ^4.2.1
+  smooth_page_indicator: ^1.1.0
   
 
 dev_dependencies:
