--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,10 @@ dependencies:
   shared_preferences: ^2.1.2
   carousel_slider: ^4.2.1
   smooth_page_indicator: ^1.1.0
-  
+  dropdown_button2: ^2.3.8
+  webview_flutter: ^2.0.10
+
+
 
 dev_dependencies:
   flutter_test:
