--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   dropdown_button2: ^2.3.8
   webview_flutter: ^2.0.10
+  dio: ^5.0.0
+  equatable: ^2.0.0
 
 
 
